--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,7 +1,31 @@
-// @font-face {
-//   font-family: "Roboto";
-//   src: url("../fonts/Roboto-Regular.woff2"),
-//     url("../fonts/Roboto-Regular.woff");
-//   font-weight: 400;
-//   font-style: normal;
-// }
+@font-face {
+  font-family: "Fira Sans";
+  src: url("../fonts/FiraSans-Light.woff2"),
+    url("../fonts/FiraSans-Light.woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Fira Sans";
+  src: url("../fonts/FiraSans-Regular.woff2"),
+    url("../fonts/FiraSans-Regular.woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Fira Sans";
+  src: url("../fonts/FiraSans-Medium.woff2"),
+    url("../fonts/FiraSans-Medium.woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Fira Sans";
+  src: url("../fonts/FiraSans-Bold.woff2"),
+    url("../fonts/FiraSans-Bold.woff");
+  font-weight: 700;
+  font-style: normal;
+}
