Add product cards

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,3 +17,6 @@
 @import './components/price-filter/price-filter.scss';
 @import './components/type-filter/type-filter.scss';
 @import './components/range-picker/range-picker.scss';
+@import './components/gost-filter/gost-filter.scss';
+@import './components/product-cards/product-cards.scss';
+@import './components/product-card/product-card.scss';
