Change table borders

--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -1,11 +1,7 @@
-.filters {
-  border: 1px solid #E6E6E6;
-  border-top: none;
-}
-
 .filters__header {
   min-height: 20px;
   padding: 18px 20px 19px;  
+  border-top: 1px solid #E6E6E6;
   border-bottom: 1px solid #E6E6E6;
 }
 
