--- a/src/components/type-filter/type-filter.scss
+++ b/src/components/type-filter/type-filter.scss
@@ -1,3 +1,7 @@
+.type-filter {
+  border-bottom: 1px solid #E6E6E6;
+}
+
 .type-filter__header {
   padding: 20px;
 }
@@ -21,10 +25,6 @@
   &.open::after {
     transform: rotate(180deg);
   }
-}
-
-.type-filter__main {
-  border-bottom: 1px solid #E6E6E6;
 }
 
 .type-filter__list {
