--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -66,7 +66,7 @@
     right: 0;
     width: 5px;
     height: 3px;
-    background: url('../../img/accordion-icon.svg') center no-repeat;
+    background: url('../../img/accordion-arrow-red.svg') center no-repeat;
   }
 }
 
