--- a/src/components/catalog/catalog.scss
+++ b/src/components/catalog/catalog.scss
@@ -5,7 +5,7 @@
 .catalog__wrapper {
   width: 1110px;
   margin: 0 auto;
-  padding: 17px 0 20px;
+  padding: 17px 0 24px;
 }
 
 .catalog__header {
@@ -79,5 +79,109 @@
   &.active {
     background-color: $red;
     border-radius: 50%;
+  }
+}
+
+.catalog__controls {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 25px;
+  margin-bottom: 40px;
+}
+
+.catalog__view-count {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-right: 180px;
+}
+
+.catalog__view-count-text {
+  @include strong-text;
+  font-size: 17px;
+  line-height: 20px;
+}
+
+.catalog__view-count-button {
+  @include text;
+  width: 28px;
+  height: 28px;
+  font-size: 17px;
+  line-height: 20px;
+
+  &.active {
+    font-weight: 400;
+    color: $red;
+    background-color: #fff;
+    border-radius: 50%;
+  }
+}
+
+.catalog__page-slider {
+  display: flex;
+  margin-right: 42px;
+}
+
+.catalog__page-slider-button {
+  @include strong-text;
+  width: 35px;
+  height: 35px;
+  color: $grey;
+  background: #fff;
+  border: 1px solid $bg-grey;
+
+  &--prev {
+    border-radius: 0px 2px 2px 0px;
+    background: #fff url('../../img/arrow-grey.svg') center no-repeat;
+    transform: rotate(180deg);
+  }
+
+  &--next {
+    border-radius: 0px 2px 2px 0px;
+    background: #fff url('../../img/arrow-grey.svg') center no-repeat;    
+  }
+
+  &.active {
+    color: #000;
+  }
+
+  & + & {
+    border-left: none;
+  }
+}
+
+.catalog__showall-button {
+  @include strong-text;
+  font-size: 15px;
+  line-height: 18px;
+  color: $red;
+}
+
+.catalog__description-title {
+  @include h3-text;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+
+.catalog__description-text {
+  @include strong-text;
+  margin-bottom: 14px;
+}
+
+.catalog__description-hide-button {
+  @include strong-text;
+  position: relative;
+  padding-right: 12px;
+  color: $red;
+
+  &::after {
+    position: absolute;
+    content: '';
+    top: 2px;
+    right: 2px;
+    width: 8px;
+    height: 8px;
+    background: url('../../img/accordion-arrow-red.svg') center no-repeat;
   }
 }
