Add clear filters button

--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -1,3 +1,8 @@
+.filters {
+  display: flex;
+  flex-direction: column;
+}
+
 .filters__header {
   min-height: 20px;
   padding: 18px 20px 19px;  
@@ -20,4 +25,13 @@
     background: url('../../img/filters-icon.svg') center no-repeat;
     opacity: 0.5;
   }
+}
+
+.filters__clear-filters {
+  @include button;
+  margin: 20px;
+  font-weight: 400;
+  color: $grey;
+  border: 1px solid #E6E6E6;
+  background-color: #fff;
 }
