--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,5 +1,10 @@
 .app {
-  width: 100px;
-  height: 100px;
-  background-color: red;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.app__main {
+  flex-grow: 1;
+  background-color: $bg-grey;
 }
