Add new type form

--- a/src/main.scss
+++ b/src/main.scss
@@ -20,3 +20,4 @@
 @import './components/gost-filter/gost-filter.scss';
 @import './components/product-cards/product-cards.scss';
 @import './components/product-card/product-card.scss';
+@import './components/new-product-type/new-product-type.scss';
