Add new product form

--- a/src/main.scss
+++ b/src/main.scss
@@ -21,3 +21,4 @@
 @import './components/product-cards/product-cards.scss';
 @import './components/product-card/product-card.scss';
 @import './components/new-product-type/new-product-type.scss';
+@import './components/new-product/new-product.scss';
