Add logic to cart button in header

--- a/src/main.scss
+++ b/src/main.scss
@@ -22,3 +22,4 @@
 @import './components/product-card/product-card.scss';
 @import './components/new-product-type/new-product-type.scss';
 @import './components/new-product/new-product.scss';
+@import './components/cart-button/cart-button.scss';
