Add adding to cart logic in product card

--- a/src/components/product-card/product-card.scss
+++ b/src/components/product-card/product-card.scss
@@ -141,6 +141,11 @@
   @include input-text;
   width: 29px;
   height: 35px;
+
+  &:disabled {
+    color: $grey;
+    cursor: auto;
+  }
 }
 
 .product-card__added-count {
