Add products list in cart

--- a/src/main.scss
+++ b/src/main.scss
@@ -23,3 +23,6 @@
 @import './components/new-product-type/new-product-type.scss';
 @import './components/new-product/new-product.scss';
 @import './components/cart-button/cart-button.scss';
+@import './components/cart/cart.scss';
+@import './components/order/order.scss';
+@import './components/cart-product-card/cart-product-card.scss';
